Changement version REACT

--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "next-cloudinary": "^6.16.0",
     "nodemailer": "^6.9.16",
     "photoswipe": "^5.4.4",
-    "react": "19.0.0-rc-66855b96-20241106",
+   "react": "^18.3.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.3.0",
     "react-masonry-css": "^1.0.16",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
